ensight_lib/test/customFiles/testFlowFiles/invalidFiles/EnsightReader/readCaseFile/readCaseFile_unequalTimesteps.case
#################################################################################################
#												#
# Test file for EnsightReaderTests::ReadCaseFile_UnequalTimesteps				#
#												#
#################################################################################################
FORMAT
type:  ensight gold
FILE
#
# (file set)	!= (number of steps) to trigger error event
#     1		!=	   2
file set:  1
number of steps:  2
